<resources>
    <string name="app_name">Finance</string>
    <string name="home_screen">Home</string>
    <string name="history_screen">History</string>
    <string name="diagram_screen">Diagram</string>
    <string name="settings_screen">Settings</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="sum">Sum</string>
    <string name="choose_date">Choose date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="input_error">Fill in all fields</string>
    <string name="filter_all">All</string>
    <string name="yes">Yes</string>
    <string name="alert_dialog_title">Confirmation</string>
    <string name="alert_dialog_message">Delete all the records?</string>
    <string name="balance">Balance</string>
    <string name="incorrect_input">Enter corrent value</string>
    <string name="undo">Undo</string>
    <string name="snackbar_title">Element deleted</string>
    <string name="stat">Statistics</string>
    <string name="total_income">Total income</string>
    <string name="total_expense">Total expense</string>
    <string-array name="income">
        <item>Salary</item>
        <item>Dividends</item>
        <item>Gift</item>
        <item>Payment of deposit</item>
    </string-array>
    <string-array name="expense">
        <item>Communal services</item>
        <item>Education</item>
        <item>Communications</item>
        <item>Home</item>
        <item>Cafes</item>
        <item>Food</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Sport</item>
    </string-array>
    <string-array name="currency" translatable="false">
        <item>₽</item>
        <item>$</item>
        <item>€</item>
    </string-array>



</resources>