<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HistoryScreenFragment"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingHorizontal="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/delete_all"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:singleSelection="true"
        style="@style/Widget.Material3.Chip.Filter">
            <com.google.android.material.chip.Chip
                android:id="@+id/filter_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/filter_all"
                android:padding="5dp"
                android:textSize="20sp"
                style="@style/Widget.Material3.Chip.Filter"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/filter_income"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/income"
                android:padding="5dp"
                android:textSize="20sp"
                style="@style/Widget.Material3.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_expense"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expense"
                android:padding="5dp"
                android:textSize="20sp"
                style="@style/Widget.Material3.Chip.Filter"/>
</com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_all"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/bin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recycler_view_history_item"/>


</LinearLayout>